--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Сервис бытовых услуг в Москве - «Муж на час», Электрик, Сантехник, Сборка мебели | КВАДА</title>
-    <base href="C:/Users/gizatullin.at/Desktop/Sites/KVADA.ru" />
+    <base href="https://folkcraft.github.io/service" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
