--- a/index.html
+++ b/index.html
@@ -2,24 +2,25 @@
 <html lang="en">
 <head>
     <title>Сервис бытовых услуг в Москве - «Муж на час», Электрик, Сантехник, Сборка мебели | КВАДА</title>
-    <base href="https://folkcraft.github.io/service" />
+    <!--<base href="https://folkcraft.github.io/service" />-->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="design/css/reset.css?1">
-<link rel="stylesheet" href="design/fonts/russo/russo.css?1">
-<link rel="stylesheet" href="design/fonts/ubuntu/ubuntu.css?1">
-<link rel="stylesheet" href="design/css/owl.carousel.css?1">
-<link rel="stylesheet" href="design/css/main.css?2">
-<link rel="stylesheet" href="design/css/media.css?2">
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-PTKJZ7N');</script>
-<!-- End Google Tag Manager -->
+    <link rel="stylesheet" href="design/fonts/russo/russo.css?1">
+    <link rel="stylesheet" href="design/fonts/ubuntu/ubuntu.css?1">
+    <link rel="stylesheet" href="design/css/owl.carousel.css?1">
+    <link rel="stylesheet" href="design/css/main.css?2">
+    <link rel="stylesheet" href="design/css/media.css?2">
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-PTKJZ7N');
+    </script>
+    <!-- End Google Tag Manager -->
 </head>
 <body>
     <header>
