--- a/index.html
+++ b/index.html
@@ -971,7 +971,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <script src="design/js/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 <script src="design/js/owl.carousel.js"></script>
 <script src="design/js/main.js?1"></script>
-<script type="text/javascript" src="/ds-comf/ds-form/js/dsforms.js"></script>
+<script type="text/javascript" src="ds-comf/ds-form/js/dsforms.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
 <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
  <script>
@@ -999,7 +999,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </script>
     <!-- END JIVOSITE CODE -->
  
- <script type="text/javascript" src="//cdn.perezvoni.com/widget/js/przv.js?przv_code=27276-ccce9e0de664d-86ccce9e0de664d-9a9c3ae86ccce9e0de6b" ></script>
+ <script type="text/javascript" src="others/js/przv.js" ></script>
     
 </body>
 </html>
